src/test/ui/linkage4.stderr
error[E0658]: the `linkage` attribute is experimental and not portable across platforms
  --> $DIR/linkage4.rs:1:1
   |
LL | #[linkage = "external"]
   | ^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/29603
   = help: add #![feature(linkage)] to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
